--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,17 +3,18 @@ apply plugin: 'com.android.application'
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 android {
-    compileSdkVersion 28
+
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    buildToolsVersion rootProject.ext.android.buildToolsVersion
     defaultConfig {
         applicationId properties.getProperty("example.package")
-        minSdkVersion 19
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
+        versionCode rootProject.ext.android.versionCode
+        versionName rootProject.ext.android.versionName
 
         manifestPlaceholders = [
                 qqappid: properties.getProperty("example.qq.appid"),
-
         ]
 
         buildConfigField("String", "EXAMPLE_UMENG_KEY", '\"' + properties.getProperty("example.umeng.key") + '\"')
@@ -41,20 +42,19 @@ android {
         }
     }
 
-
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "com.android.support:appcompat-v7:$rootProject.ext.android.supportVersion"
 
     implementation 'com.umeng.umsdk:common:1.5.4'
     implementation 'com.umeng.umsdk:utdid:1.1.5.3'
 
-    implementation 'com.umeng.umsdk:share-core:6.9.4'
-    implementation 'com.umeng.umsdk:share-wx:6.9.4'
-    implementation 'com.umeng.umsdk:share-qq:6.9.4'
-    implementation 'com.umeng.umsdk:share-sina:6.9.4'
+    implementation "com.umeng.umsdk:share-core:$rootProject.ext.android.umengVersion"
+    implementation "com.umeng.umsdk:share-wx:$rootProject.ext.android.umengVersion"
+    implementation "com.umeng.umsdk:share-qq:$rootProject.ext.android.umengVersion"
+    implementation "com.umeng.umsdk:share-sina:$rootProject.ext.android.umengVersion"
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
