--- a/rxumeng-social/build.gradle
+++ b/rxumeng-social/build.gradle
@@ -1,36 +1,10 @@
 apply plugin: 'com.android.library'
-
-android {
-    compileSdkVersion 28
-
-
-
-    defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-}
+apply from: "bintray.gradle"
 
 dependencies {
-    compileOnly 'com.android.support:appcompat-v7:28.0.0'
+    compileOnly "com.android.support:appcompat-v7:$rootProject.ext.android.supportVersion"
 
-    compileOnly 'com.umeng.umsdk:share-core:6.9.4'
-    compileOnly 'com.umeng.umsdk:share-wx:6.9.4'
-    compileOnly 'com.umeng.umsdk:share-qq:6.9.4'
-    compileOnly 'com.umeng.umsdk:share-sina:6.9.4'
+    compileOnly "com.umeng.umsdk:share-core:$rootProject.ext.android.umengVersion"
 
     compileOnly 'io.reactivex.rxjava2:rxjava:2.2.4'
     compileOnly 'io.reactivex.rxjava2:rxandroid:2.1.0'
